zellij-server/src/unit/snapshots/zellij_server__screen__screen_tests__send_cli_move_focus_pane_action.snap
---
source: zellij-server/src/./unit/screen_tests.rs
expression: "format!(\"{:?}\", cursor_coordinates)"
---
Some((0, 1))
